--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "80a0ac45-0abb-416b-b566-2cebcef36900",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d6aa3baa25f48eab96991ed6be73ec6",
+       "model_id": "c6706a46d5f340c9ba7f081ad7a54715",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "e5424537-bcf8-40db-b88b-1172dd9f101a",
    "metadata": {},
    "outputs": [
@@ -268,15 +268,15 @@
      "output_type": "stream",
      "text": [
       "mkdir: cannot create directory ‘polymer’: File exists\n",
-      "HPT PEO PEO TPT\n"
+      "HPT PEO PEO PEO TPT\n"
      ]
     }
    ],
    "source": [
     "#Build the desired homopolymer using above prepi files\n",
-    "%mkdir polymer\n",
+    "#%mkdir polymer\n",
     "n_mono_repeat=5\n",
-    "n_mono_pol=20\n",
+    "n_mono_pol=25\n",
     "\n",
     "repeat=\" \".join(['PEO'] * int(int(n_mono_pol/n_mono_repeat)-2))\n",
     "print('HPT '+str(repeat)+' TPT')\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "49dc9f1a-96ac-47f5-a9d3-f50ef4cedcf6",
    "metadata": {},
    "outputs": [
@@ -306,31 +306,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 2023-08-22 11:01:14 Beginning InterMol conversion\n",
+      "INFO 2024-01-18 12:21:22 Beginning InterMol conversion\n",
       "\n",
-      "INFO 2023-08-22 11:01:14 InterMol is research software. If you make use of InterMol in scientific publications please cite the following reference:\n",
+      "INFO 2024-01-18 12:21:22 InterMol is research software. If you make use of InterMol in scientific publications please cite the following reference:\n",
       "Shirts, M.R., Klein, C., Swails, J.M. et al. J Comput Aided Mol Des (2016). doi:10.1007/s10822-016-9977-1\n",
       "\n",
-      "/home/harish/GroPolBul/tutorial/PEO_CH3/polymer/PEO_20mer.prmtop /home/harish/GroPolBul/tutorial/PEO_CH3/polymer/PEO_20mer.inpcrd\n",
-      "INFO 2023-08-22 11:01:14 Finished!\n"
+      "/home/harish/GroPolBul/tutorial/PEO_CH3/polymer/PEO_25mer.prmtop /home/harish/GroPolBul/tutorial/PEO_CH3/polymer/PEO_25mer.inpcrd\n",
+      "INFO 2024-01-18 12:21:23 Finished!\n"
      ]
     }
    ],
    "source": [
     "#Converting AMBER to GROMACS using \"intermol\".\n",
-    "!python /home/harish/InterMol/intermol/convert.py --amb_in polymer/PEO_{n_mono_pol}mer.inpcrd polymer/PEO_{n_mono_pol}mer.prmtop --gromacs "
+    "!python ../../convert.py --amb_in polymer/PEO_{n_mono_pol}mer.inpcrd polymer/PEO_{n_mono_pol}mer.prmtop --gromacs "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "31aed698-32c4-4b1b-ac6c-d9f46f9525e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e00ee453c22f465db16e2604e6bbf23b",
+       "model_id": "dd7803dccd47427b928564668b66ece7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,7 +344,7 @@
    ],
    "source": [
     "#Visualize the molecule\n",
-    "mol=read('polymer/PEO_20mer.pdb')\n",
+    "mol=read('polymer/PEO_25mer.pdb')\n",
     "vi=ngl.show_ase(mol);#vi.add_label(radius=2,color='black',label_type='atomindex')\n",
     "vi\n"
    ]
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
