--- a/Turtorial_Tg_calculation.ipynb
+++ b/Turtorial_Tg_calculation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T14:59:28.805916Z",
@@ -21,93 +21,42 @@
     "init_cell": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f13277ca17e43a1a2fb25b935b5ecbf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/harish/GroPolBul/tutorial\n",
+      "/home/harish/GroPolBul/tutorial/PEO_LiTFSI/Tg\n"
+     ]
+    }
+   ],
    "source": [
     "#import *\n",
+    "#import *\n",
     "import numpy as np\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.font_manager\n",
-    "import pandas as pd\n",
-    "from glob import glob,iglob\n",
-    "import pickle\n",
-    "#import seaborn as sns\n",
-    "import os, sys\n",
-    "sys.setrecursionlimit(10**7)\n",
-    "import panedr\n",
-    "import subprocess as sp\n",
-    "import MDAnalysis as mda\n",
-    "from scipy.optimize import curve_fit\n",
-    "from scipy.interpolate import UnivariateSpline\n",
-    "import matplotlib.gridspec as gridspec\n",
-    "#import onsager\n",
-    "plt.style.use('~/hargu_seaborn.mplstyle')\n",
-    "from ase.io import read,write\n",
-    "from ase.visualize import view\n",
-    "from ase.io.trajectory import Trajectory\n",
-    "import nglview\n",
-    "#from tame.io import load_traj\n",
-    "#from tame.fit import linear_fit\n",
-    "def mlog(x,a,b):\n",
-    "    return a*np.power(x,b)\n",
+    "import os\n",
+    "import nglview as ngl\n",
+    "from ase.io import read, write\n",
+    "WDIR='/home/harish/GroPolBul/tutorial/'\n",
+    "#%mkdir {WDIR}\n",
+    "%cd {WDIR}\n",
     "\n",
-    "def biexp(x,a1,a2,b1,b2):\n",
-    "    return (1-a1-a2)+a1*np.exp(-x/b1)+a2*np.exp(-x/b2)\n",
-    "\n",
-    "def f_x(x,a):\n",
-    "    return a/x\n",
-    "def fx(x,b):\n",
-    "    return -b*x\n",
-    "\n",
-    "def polycoeffs(x, coeffs):\n",
-    "    \"\"\" Returns a polynomial for ``x`` values for the ``coeffs`` provided.\n",
-    "\n",
-    "    The coefficients must be in ascending order (``x**0`` to ``x**o``).\n",
-    "    \"\"\"\n",
-    "    o = len(coeffs)\n",
-    "    print(f'# This is a polynomial of order {ord}.')\n",
-    "    y = 0\n",
-    "    for i in range(o):\n",
-    "        y += coeffs[i]*x**i\n",
-    "    return y\n",
-    "\n",
-    "#%load_ext gnuplot_kernel\n",
-    "#%reload_ext gnuplot_kernel\n",
-    "\n",
-    "#Functions to calculate average and stanard deviation of 2 or more PMSDs from different segments of the simulation\n",
-    "def scol_avg_std(cor,conc,cs,tk,col): \n",
-    "    #cor(string)-which type of correlation to consider eg. pmsd or corr\n",
-    "    #chr(integer)-which charge scheme eg. 0:p150s100, 5: p150s75 \n",
-    "    #col(string)-which coloumn to consider eg. 'PMSD','distliN' \n",
-    "    sum=0;average=0;diffsquared = 0;sum_diffsquared = 0;\n",
-    "    n=len(cor[conc][cs][tk]) #n(integer)-number of segments for S75-2 and S100-3 or more\n",
-    "    for i in range(n):\n",
-    "        sum=sum+cor[conc][cs][tk][i][col]\n",
-    "    sum=sum\n",
-    "    average=sum/n\n",
-    "    for i in range(n):\n",
-    "        diffsquared=(cor[conc][cs][tk][i][col] - average)**2\n",
-    "        sum_diffsquared=sum_diffsquared+diffsquared\n",
-    "    stddev=((sum_diffsquared)/n)**(1/2)\n",
-    "    \n",
-    "    return average,stddev\n",
-    "\n",
-    "def col_avg_std(cor,conc,col): \n",
-    "    #cor(string)-which type of correlation to consider eg. pmsd or corr\n",
-    "    #chr(integer)-which charge scheme eg. 0:p150s100, 5: p150s75 \n",
-    "    #col(string)-which coloumn to consider eg. 'PMSD','distliN' \n",
-    "    sum=0;average=0;diffsquared = 0;sum_diffsquared = 0;\n",
-    "    n=len(cor[conc]) #n(integer)-number of segments for S75-2 and S100-3 or more\n",
-    "    for i in range(n):\n",
-    "        sum=sum+cor[conc][i][col]\n",
-    "    sum=sum\n",
-    "    average=sum/n\n",
-    "    for i in range(n):\n",
-    "        diffsquared=(cor[conc][i][col] - average)**2\n",
-    "        sum_diffsquared=sum_diffsquared+diffsquared\n",
-    "    stddev=((sum_diffsquared)/n)**(1/2)\n",
-    "    \n",
-    "    return average,stddev\n",
+    "#Desired polymer electrolyte system\n",
+    "#%mkdir PEO_LiTFSI\n",
+    "%cd PEO_LiTFSI/Tg\n",
     "\n",
     "def line(x,m,c):\n",
     "    return m*x+c\n",
@@ -119,306 +68,6 @@
     "    xi = (c1-c2) / (m2-m1)\n",
     "    yi = m1 * xi + c1\n",
     "    return yi\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-16T14:59:28.814016Z",
-     "start_time": "2023-01-16T14:59:28.809668Z"
-    },
-    "init_cell": true,
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "MDDIR='/cfs/klemming/nobackup/h/hargu978/Cuc_kristina_SelfHealing_polymer/MD'\n",
-    "ANADIR='/cfs/klemming/nobackup/h/hargu978/Cuc_kristina_SelfHealing_polymer/analysis'\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-02-15T18:01:32.133067Z",
-     "start_time": "2022-02-15T18:01:32.101122Z"
-    },
-    "code_folding": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nmon</th>\n",
-       "      <th>npol</th>\n",
-       "      <th>conc</th>\n",
-       "      <th>T</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Density</th>\n",
-       "      <th>Volume_std</th>\n",
-       "      <th>Density_std</th>\n",
-       "      <th>Tg</th>\n",
-       "      <th>dens_atTg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>80</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>400</td>\n",
-       "      <td>129.336</td>\n",
-       "      <td>1188.02</td>\n",
-       "      <td>387.937146</td>\n",
-       "      <td>3563.390156</td>\n",
-       "      <td>319.054321</td>\n",
-       "      <td>1245.636242</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>80</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>319.054321</td>\n",
-       "      <td>1245.636242</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  nmon npol   conc    T   Volume  Density  Volume_std  Density_std  \\\n",
-       "0   80    6  0.125  400  129.336  1188.02  387.937146  3563.390156   \n",
-       "1   80    6  0.125  500      NaN      NaN         NaN          NaN   \n",
-       "\n",
-       "           Tg    dens_atTg  \n",
-       "0  319.054321  1245.636242  \n",
-       "1  319.054321  1245.636242  "
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Initial dataframe that consits all details of the simulations\n",
-    "\n",
-    "#This dataframe is saved as npy file (see next cell).\n",
-    "\n",
-    "#Convert this cell from RawNbConvert to Code by typing Ctr+Y\n",
-    "#Run this cell carefully dont overwrite the current file if needed change the file names\n",
-    "#data={}\n",
-    "#form=['C27H48O10','C147H248O50','C603H1008O202','C1491H2488O498']\n",
-    "#mw=[532.665198,2815.518398,11490.360558,28383.474238]\n",
-    "\n",
-    "for egr in ['OH','SLF']:\n",
-    "    #data[egr]={}\n",
-    "    #data[egr]['mw.']=mw[i] ## Molecular weight\n",
-    "    #data[egr]['formula']=form[i] ## Chemical Formula\n",
-    "    for nmon,npol in zip([16,80],[30,6]):\n",
-    "        #data[egr][nmon]={}\n",
-    "        for conc in [0,0.125]:\n",
-    "            #data[egr][nmon][conc]=pd.DataFrame(columns=['nmon','npol','conc','T','Volume','Density'])\n",
-    "            for rw,temp in enumerate([400,500]):\n",
-    "                data[egr][nmon][conc].at[rw,'nmon']=nmon\n",
-    "                data[egr][nmon][conc].at[rw,'npol']=npol\n",
-    "                data[egr][nmon][conc].at[rw,'conc']=conc\n",
-    "                data[egr][nmon][conc].at[rw,'T']=temp\n",
-    "            \n",
-    "data[egr][nmon][conc]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-16T14:59:28.830894Z",
-     "start_time": "2023-01-16T14:59:28.816967Z"
-    },
-    "init_cell": true
-   },
-   "outputs": [],
-   "source": [
-    "#Dump this dictionary to a npy file and can reload again when needed\n",
-    "#np.save('analysis_data.npy', data)\n",
-    "#np.save('analysis_data_backup.npy', data)\n",
-    "\n",
-    "#Loading the saved dictionary\n",
-    "data=np.load('analysis_data.npy',allow_pickle=True).item()\n",
-    "\n",
-    "#To add new coloumn just type df[nmon[i]][conc[c]]['NEW-COLOUM']=NEW COLOUMN DATA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-02-15T18:02:01.392952Z",
-     "start_time": "2022-02-15T18:02:01.372308Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nmon</th>\n",
-       "      <th>npol</th>\n",
-       "      <th>conc</th>\n",
-       "      <th>T</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Density</th>\n",
-       "      <th>Volume_std</th>\n",
-       "      <th>Density_std</th>\n",
-       "      <th>Tg</th>\n",
-       "      <th>dens_atTg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>80</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>400</td>\n",
-       "      <td>129.336</td>\n",
-       "      <td>1188.02</td>\n",
-       "      <td>387.937146</td>\n",
-       "      <td>3563.390156</td>\n",
-       "      <td>319.054321</td>\n",
-       "      <td>1245.636242</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>80</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>319.054321</td>\n",
-       "      <td>1245.636242</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  nmon npol   conc    T   Volume  Density  Volume_std  Density_std  \\\n",
-       "0   80    6  0.125  400  129.336  1188.02  387.937146  3563.390156   \n",
-       "1   80    6  0.125  500      NaN      NaN         NaN          NaN   \n",
-       "\n",
-       "           Tg    dens_atTg  \n",
-       "0  319.054321  1245.636242  \n",
-       "1  319.054321  1245.636242  "
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[egr][nmon][conc]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Folders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-02-15T18:22:57.835472Z",
-     "start_time": "2022-02-15T18:22:51.439177Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/cfs/klemming/nobackup/h/hargu978/Cuc_kristina_SelfHealing_polymer/analysis/hbond\n",
-      "/cfs/klemming/nobackup/h/hargu978/Cuc_kristina_SelfHealing_polymer/analysis\n"
-     ]
-    }
-   ],
-   "source": [
-    "#making folders\n",
-    "anatype='hbond' #'rdf_cn' 'msd' 'cond' 'restime' 'hbond'\n",
-    "%mkdir {ANADIR}/{anatype}\n",
-    "%cd {ANADIR}/{anatype}\n",
-    "for egr in ['OH','SLF']:\n",
-    "    %mkdir PCL_PTM_{egr}\n",
-    "    for nmon in [16,80]:\n",
-    "        %mkdir PCL_PTM_{egr}/{nmon}mer\n",
-    "        for conc in [0,0.125]:\n",
-    "            %mkdir PCL_PTM_{egr}/{nmon}mer/{conc}\n",
-    "            for temp in [400,500]:\n",
-    "                %mkdir PCL_PTM_{egr}/{nmon}mer/{conc}/{temp}\n",
-    "\n",
-    "%cd {ANADIR}"
    ]
   },
   {
@@ -498,54 +147,6 @@
     "\n",
     "                    data[egr][nmon][conc].at[rw,prop]=np.average(averages)\n",
     "                    #data[egr][nmon][conc].at[rw,str(prop)+'_std']=np.std(averages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-07T16:20:51.039339Z",
-     "start_time": "2022-01-07T16:20:51.008284Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'OH': {16: {0:   nmon npol conc    T   Volume  Density  edr  Volume_std  Density_std\n",
-       "   0   16   30    0  400  109.618  1050.55  NaN  328.854486  3151.659748\n",
-       "   1   16   30    0  450      NaN      NaN  NaN         NaN          NaN,\n",
-       "   0.125:   nmon npol   conc    T   Volume  Density  Volume_std  Density_std\n",
-       "   0   16   30  0.125  400  128.017  1181.51  383.464447  3539.133001\n",
-       "   1   16   30  0.125  450      NaN      NaN         NaN          NaN},\n",
-       "  80: {0:   nmon npol conc    T   Volume  Density  Volume_std  Density_std\n",
-       "   0   80    6    0  400  106.502  1052.81  319.505163  3158.424899\n",
-       "   1   80    6    0  450      NaN      NaN         NaN          NaN,\n",
-       "   0.125:   nmon npol   conc    T   Volume Density  Volume_std  Density_std\n",
-       "   0   80    6  0.125  400  124.944  1186.9  373.819731  3551.034795\n",
-       "   1   80    6  0.125  450      NaN     NaN         NaN          NaN}},\n",
-       " 'SLF': {16: {0:   nmon npol conc    T   Volume  Density  Volume_std  Density_std\n",
-       "   0   16   30    0  400  132.091  1090.03  395.846056  3266.576587\n",
-       "   1   16   30    0  450      NaN      NaN         NaN          NaN,\n",
-       "   0.125:   nmon npol   conc    T   Volume  Density  Volume_std  Density_std\n",
-       "   0   16   30  0.125  400  150.969  1190.46  452.442989  3567.729986\n",
-       "   1   16   30  0.125  450      NaN      NaN         NaN          NaN},\n",
-       "  80: {0:   nmon npol conc    T   Volume  Density  Volume_std  Density_std\n",
-       "   0   80    6    0  400  110.935  1062.18  332.806334  3186.542738\n",
-       "   1   80    6    0  450      NaN      NaN         NaN          NaN,\n",
-       "   0.125:   nmon npol   conc    T   Volume  Density  Volume_std  Density_std\n",
-       "   0   80    6  0.125  400  129.336  1188.02  387.937146  3563.390156\n",
-       "   1   80    6  0.125  450      NaN      NaN         NaN          NaN}}}"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
    ]
   },
   {
