--- a/Tutorial_GAFF_parameterisation.ipynb
+++ b/Tutorial_GAFF_parameterisation.ipynb
@@ -2,28 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "80a0ac45-0abb-416b-b566-2cebcef36900",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d1ecdfbae034af3bc8fcdfbeffadac4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/harish/GroPolBul/tutorial\n",
-      "/home/harish/GroPolBul/tutorial/PEO_CH3\n"
+      "/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial\n",
+      "/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/PEO_CH3\n"
      ]
     }
    ],
@@ -33,7 +21,7 @@
     "import os\n",
     "import nglview as ngl\n",
     "from ase.io import read, write\n",
-    "WDIR='/home/harish/GroPolBul/tutorial/'\n",
+    "WDIR='/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/'\n",
     "#%mkdir {WDIR}\n",
     "%cd {WDIR}\n",
     "\n",
@@ -52,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "c5eec02e",
    "metadata": {},
    "outputs": [
@@ -83,9 +71,13 @@
       "   Status: pass\n",
       "acdoctor mode has completed checking the input file.\n",
       "\n",
+      "/bin/bash: /mnt/c/Users/hargu978/Documents/miniconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
+      "/bin/bash: /mnt/c/Users/hargu978/Documents/miniconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
       "Info: Total number of electrons: 138; net charge: 0\n",
       "\n",
-      "Running: /home/harish/miniconda3/envs/harish_env/bin/sqm -O -i sqm.in -o sqm.out\n",
+      "Running: /mnt/c/Users/hargu978/Documents/miniconda3/bin/sqm -O -i sqm.in -o sqm.out\n",
+      "/bin/bash: /mnt/c/Users/hargu978/Documents/miniconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
+      "/bin/bash: /mnt/c/Users/hargu978/Documents/miniconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
       "\n"
      ]
     }
@@ -109,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "304dd30e-80ba-490a-a6db-6e454e2eb3f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6a1fbe9bf974566821c945fea2779ea",
+       "model_id": "a580245fd88d43e19307b7bd1f130aa2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +122,7 @@
    ],
    "source": [
     "#Visualize the molecule\n",
-    "mon=read('/home/harish/GroPolBul/anions/sqm.pdb')\n",
+    "mon=read('sqm.pdb')\n",
     "vi=ngl.show_ase(mon);vi.add_label(radius=2,color='black',label_type='atomindex')\n",
     "vi\n"
    ]
@@ -145,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "2384aa63-956d-47bf-8f39-72b23c6e2b70",
    "metadata": {},
    "outputs": [],
@@ -167,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "2c438f26",
    "metadata": {},
    "outputs": [
@@ -259,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "e5424537-bcf8-40db-b88b-1172dd9f101a",
    "metadata": {},
    "outputs": [
@@ -267,7 +259,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mkdir: cannot create directory ‘polymer’: File exists\n",
       "HPT PEO PEO PEO TPT\n"
      ]
     }
@@ -298,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "49dc9f1a-96ac-47f5-a9d3-f50ef4cedcf6",
    "metadata": {},
    "outputs": [
@@ -306,13 +297,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 2024-01-18 12:21:22 Beginning InterMol conversion\n",
-      "\n",
-      "INFO 2024-01-18 12:21:22 InterMol is research software. If you make use of InterMol in scientific publications please cite the following reference:\n",
-      "Shirts, M.R., Klein, C., Swails, J.M. et al. J Comput Aided Mol Des (2016). doi:10.1007/s10822-016-9977-1\n",
-      "\n",
-      "/home/harish/GroPolBul/tutorial/PEO_CH3/polymer/PEO_25mer.prmtop /home/harish/GroPolBul/tutorial/PEO_CH3/polymer/PEO_25mer.inpcrd\n",
-      "INFO 2024-01-18 12:21:23 Finished!\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/PEO_CH3/../../convert.py\", line 13, in <module>\n",
+      "    import intermol.gromacs as gmx\n",
+      "  File \"/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/intermol/gromacs/__init__.py\", line 8, in <module>\n",
+      "    from intermol.gromacs.gromacs_parser import load, save\n",
+      "  File \"/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/intermol/gromacs/gromacs_parser.py\", line 15, in <module>\n",
+      "    from intermol.moleculetype import MoleculeType\n",
+      "  File \"/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/intermol/moleculetype.py\", line 1, in <module>\n",
+      "    from intermol.orderedset import OrderedSet\n",
+      "  File \"/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/intermol/orderedset.py\", line 5, in <module>\n",
+      "    class OrderedSet(collections.Set):\n",
+      "                     ^^^^^^^^^^^^^^^\n",
+      "AttributeError: module 'collections' has no attribute 'Set'\n"
      ]
     }
    ],
@@ -323,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "31aed698-32c4-4b1b-ac6c-d9f46f9525e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f15d224b41384cb198064fd0477fc31b",
+       "model_id": "5014e57316f049a6bbd3de7396ccaa2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -363,18 +360,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.11"
   }
  },
  "nbformat": 4,
