--- a/Tutorial_GAFF_parameterisation.ipynb
+++ b/Tutorial_GAFF_parameterisation.ipynb
@@ -2,16 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "80a0ac45-0abb-416b-b566-2cebcef36900",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "52f247b49a604d58bc82d6889fb2dfe8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial\n",
       "/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/PEO_CH3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/IPython/core/magics/osm.py:417: UserWarning: using dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
      ]
     }
    ],
@@ -101,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "304dd30e-80ba-490a-a6db-6e454e2eb3f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a580245fd88d43e19307b7bd1f130aa2",
+       "model_id": "8a698983522c4b9faf81600ba988bbf3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "31aed698-32c4-4b1b-ac6c-d9f46f9525e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5014e57316f049a6bbd3de7396ccaa2b",
+       "model_id": "774a5dd4ab71494486c338a646c1940a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,6 +380,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
