--- a/Tutorial_GAFF_parameterisation.ipynb
+++ b/Tutorial_GAFF_parameterisation.ipynb
@@ -2,47 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "80a0ac45-0abb-416b-b566-2cebcef36900",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8923d58f5c3a4054bcd50623754dbab7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: '/home/harishkemi/GroPolBul/tutorial/'\n",
-      "/mnt/c/Users/hargu978/Documents\n",
-      "[Errno 2] No such file or directory: 'PEO_CH3'\n",
-      "/mnt/c/Users/hargu978/Documents\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/IPython/core/magics/osm.py:393: UserWarning: using bookmarks requires you to install the `pickleshare` library.\n",
-      "  bkms = self.shell.db.get('bookmarks', {})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import *\n",
     "import numpy as np\n",
     "import os\n",
     "import nglview as ngl\n",
-    "from ase.io import read, write\n",
+    "#from ase.io import read, write\n",
     "WDIR='~/GroPolBul/tutorial/'\n",
     "#%mkdir {WDIR}\n",
     "%cd {WDIR}\n",
@@ -62,48 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c5eec02e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Welcome to antechamber 22.0: molecular input file processor.\n",
-      "\n",
-      "Info: acdoctor mode is on: check and diagnose problems in the input file.\n",
-      "Info: The atom type is set to gaff; the options available to the -at flag are\n",
-      "      gaff, gaff2, amber, bcc, and sybyl.\n",
-      "\n",
-      "-- Check Format for pdb File --\n",
-      "   Status: pass\n",
-      "-- Check Unusual Elements --\n",
-      "   Status: pass\n",
-      "-- Check Open Valences --\n",
-      "   Status: pass\n",
-      "-- Check Geometry --\n",
-      "      for those bonded   \n",
-      "      for those not bonded   \n",
-      "   Status: pass\n",
-      "-- Check Weird Bonds --\n",
-      "   Status: pass\n",
-      "-- Check Number of Units --\n",
-      "   Status: pass\n",
-      "acdoctor mode has completed checking the input file.\n",
-      "\n",
-      "/bin/bash: /mnt/c/Users/hargu978/Documents/miniconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "/bin/bash: /mnt/c/Users/hargu978/Documents/miniconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "Info: Total number of electrons: 138; net charge: 0\n",
-      "\n",
-      "Running: /mnt/c/Users/hargu978/Documents/miniconda3/bin/sqm -O -i sqm.in -o sqm.out\n",
-      "/bin/bash: /mnt/c/Users/hargu978/Documents/miniconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "/bin/bash: /mnt/c/Users/hargu978/Documents/miniconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Use shor polymer with repeat group, head and tail group\n",
     "#repeat group: COCCOCCOCCOCCOC\n",
@@ -123,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "304dd30e-80ba-490a-a6db-6e454e2eb3f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a698983522c4b9faf81600ba988bbf3",
+       "model_id": "a15689eadcdf48b2b1313ae89f926fb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -311,30 +242,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "49dc9f1a-96ac-47f5-a9d3-f50ef4cedcf6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/PEO_CH3/../../convert.py\", line 13, in <module>\n",
-      "    import intermol.gromacs as gmx\n",
-      "  File \"/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/intermol/gromacs/__init__.py\", line 8, in <module>\n",
-      "    from intermol.gromacs.gromacs_parser import load, save\n",
-      "  File \"/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/intermol/gromacs/gromacs_parser.py\", line 15, in <module>\n",
-      "    from intermol.moleculetype import MoleculeType\n",
-      "  File \"/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/intermol/moleculetype.py\", line 1, in <module>\n",
-      "    from intermol.orderedset import OrderedSet\n",
-      "  File \"/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/intermol/orderedset.py\", line 5, in <module>\n",
-      "    class OrderedSet(collections.Set):\n",
-      "                     ^^^^^^^^^^^^^^^\n",
-      "AttributeError: module 'collections' has no attribute 'Set'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Converting AMBER to GROMACS using \"intermol\".\n",
     "!python ../../convert.py --amb_in polymer/PEO_{n_mono_pol}mer.inpcrd polymer/PEO_{n_mono_pol}mer.prmtop --gromacs "
@@ -342,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "31aed698-32c4-4b1b-ac6c-d9f46f9525e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "774a5dd4ab71494486c338a646c1940a",
+       "model_id": "a0b12586cf674e158c7780a434cde1c9",
        "version_major": 2,
        "version_minor": 0
       },
