--- a/Turtorial_Tg_calculation.ipynb
+++ b/Turtorial_Tg_calculation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T14:59:28.805916Z",
@@ -21,24 +21,7 @@
     "init_cell": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/PEO_LiTFSI\n",
-      "/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/PEO_LiTFSI/Tg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Users/hargu978/Documents/miniconda3/lib/python3.11/site-packages/IPython/core/magics/osm.py:417: UserWarning: using dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import *\n",
     "import numpy as np\n",
@@ -48,7 +31,7 @@
     "from panedr import edr_to_df as edrdf\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "WDIR='/mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/PEO_LiTFSI'\n",
+    "WDIR='~/GroPolBul/tutorial/PEO_LiTFSI'\n",
     "#%mkdir {WDIR}\n",
     "%cd {WDIR}\n",
     "\n",
@@ -81,122 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: cannot remove 'core': No such file or directory\n",
-      "                      :-) GROMACS - gmx grompp, 2023.3 (-:\n",
-      "\n",
-      "Executable:   /usr/local/gromacs/bin/gmx\n",
-      "Data prefix:  /usr/local/gromacs\n",
-      "Working dir:  /mnt/c/Users/hargu978/Documents/GroPolBul/tutorial/PEO_LiTFSI/Tg\n",
-      "Command line:\n",
-      "  gmx grompp -f npt_tg.mdp -c ../preeq/npt_0.gro -p ../topol_0.top -o npt_0.tpr -maxwarn 2\n",
-      "\n",
-      "Ignoring obsolete mdp entry 'title'\n",
-      "Ignoring obsolete mdp entry 'ns_type'\n",
-      "\n",
-      "WARNING 1 [file npt_tg.mdp]:\n",
-      "  The Berendsen barostat does not generate any strictly correct ensemble,\n",
-      "  and should not be used for new production simulations (in our opinion).\n",
-      "  We recommend using the C-rescale barostat instead.\n",
-      "\n",
-      "Setting the LD random seed to -1083322946\n",
-      "\n",
-      "Generated 210 of the 210 non-bonded parameter combinations\n",
-      "Generating 1-4 interactions: fudge = 0.5\n",
-      "\n",
-      "Generated 210 of the 210 1-4 parameter combinations\n",
-      "\n",
-      "Excluding 3 bonded neighbours molecule type 'PEO'\n",
-      "\n",
-      "turning H bonds into constraints...\n",
-      "\n",
-      "Excluding 1 bonded neighbours molecule type 'LI'\n",
-      "\n",
-      "turning H bonds into constraints...\n",
-      "\n",
-      "Excluding 3 bonded neighbours molecule type 'TFS'\n",
-      "\n",
-      "turning H bonds into constraints...\n",
-      "Analysing residue names:\n",
-      "There are:    50      Other residues\n",
-      "Analysing residues not classified as Protein/DNA/RNA/Water and splitting into groups...\n",
-      "Simulated annealing for group System: Single, 42 timepoints\n",
-      "Time (ps)   Temperature (K)\n",
-      "      0.0      540.0\n",
-      "   1000.0      540.0\n",
-      "   1010.0      520.0\n",
-      "   2010.0      520.0\n",
-      "   2020.0      500.0\n",
-      "   3020.0      500.0\n",
-      "   3030.0      480.0\n",
-      "   4030.0      480.0\n",
-      "   4040.0      460.0\n",
-      "   5040.0      460.0\n",
-      "   5050.0      440.0\n",
-      "   6050.0      440.0\n",
-      "   6060.0      420.0\n",
-      "   7060.0      420.0\n",
-      "   7070.0      400.0\n",
-      "   8070.0      400.0\n",
-      "   8080.0      380.0\n",
-      "   9080.0      380.0\n",
-      "   9090.0      360.0\n",
-      "  10090.0      360.0\n",
-      "  10100.0      340.0\n",
-      "  11100.0      340.0\n",
-      "  11110.0      320.0\n",
-      "  12110.0      320.0\n",
-      "  12120.0      300.0\n",
-      "  13120.0      300.0\n",
-      "  13130.0      280.0\n",
-      "  14130.0      280.0\n",
-      "  14140.0      260.0\n",
-      "  15140.0      260.0\n",
-      "  15150.0      240.0\n",
-      "  16150.0      240.0\n",
-      "  16160.0      220.0\n",
-      "  17160.0      220.0\n",
-      "  17170.0      200.0\n",
-      "  18170.0      200.0\n",
-      "  18180.0      180.0\n",
-      "  19180.0      180.0\n",
-      "  19190.0      160.0\n",
-      "  21190.0      160.0\n",
-      "  22000.0      140.0\n",
-      "  23000.0-     140.0\n",
-      "Number of degrees of freedom in T-Coupling group System is 4427.00\n",
-      "\n",
-      "The largest distance between excluded atoms is 0.400 nm between atom 593 and 600\n",
-      "\n",
-      "Determining Verlet buffer for a tolerance of 0.005 kJ/mol/ps at 540 K\n",
-      "\n",
-      "Calculated rlist for 1x1 atom pair-list as 1.200 nm, buffer size 0.000 nm\n",
-      "\n",
-      "Set rlist, assuming 4x4 atom pair-list, to 1.200 nm, buffer size 0.000 nm\n",
-      "\n",
-      "Note that mdrun will redetermine rlist based on the actual pair-list setup\n",
-      "Calculating fourier grid dimensions for X Y Z\n",
-      "Using a fourier grid of 8x8x8, spacing 0.316 0.357 0.308\n",
-      "\n",
-      "Estimate for the relative computational load of the PME mesh part: 0.11\n",
-      "\n",
-      "This run will generate roughly 91 Mb of data\n",
-      "\n",
-      "There was 1 WARNING\n",
-      "\n",
-      "Back Off! I just backed up npt_0.tpr to ./#npt_0.tpr.1#\n",
-      "\n",
-      "GROMACS reminds you: \"Sort Of\" (Urban Dance Squad)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%rm \\#* core\n",
     "conc=0\n",
@@ -263,13 +133,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -309,13 +172,6 @@
     "\n",
     "plt.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -558,13 +414,6 @@
     "for conc,cl,mk in zip([0,0.02],['tab:blue','tab:orange'],['o','d']):\n",
     "    tg_fit(tg_data[conc]['T_K'],tg_data[conc]['den_mean'],140,200,300,500,'PEO_LiTFSI '+str(conc),cl,mk)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -574,6 +423,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
