--- a/Turtorial_Build_run_MDsimulations.ipynb
+++ b/Turtorial_Build_run_MDsimulations.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-30T15:37:31.704983Z",
@@ -138,18 +138,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c3159b9ac8c4d81b5fabf5cc38a4666",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "NGLWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'ngl' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m vi\u001b[38;5;241m=\u001b[39m\u001b[43mngl\u001b[49m\u001b[38;5;241m.\u001b[39mshow_ase(read(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minitial_0.02.pdb\u001b[39m\u001b[38;5;124m'\u001b[39m),viewer\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mngl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m vi\u001b[38;5;241m.\u001b[39madd_unitcell()\n\u001b[1;32m      3\u001b[0m vi\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ngl' is not defined"
+     ]
     }
    ],
    "source": [
